--- a/app/src/main/res/layout/main_home_item.xml
+++ b/app/src/main/res/layout/main_home_item.xml
@@ -8,20 +8,24 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardCornerRadius="20dp"
-        android:layout_margin="8dp">
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginRight="11dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/image"
                 android:src="@drawable/brochure"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="400dp" />
 
             <TextView
                 android:id="@+id/title"
