--- a/app/src/main/res/layout/activity_main_home.xml
+++ b/app/src/main/res/layout/activity_main_home.xml
@@ -7,16 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".active.MainHomeActivity">
 
-    <android.support.v4.view.ViewPager
-        android:foregroundGravity="center"
-        android:id="@+id/viewPager"
-        android:layout_centerInParent="true"
-        android:overScrollMode="never"
-        android:clipToPadding="false"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/main_nav">
-    </android.support.v4.view.ViewPager>
 
     <!--<Button
         android:id="@+id/btnOrder"
@@ -44,5 +34,23 @@
         app:menu="@menu/nav_items">
 
     </android.support.design.widget.BottomNavigationView>
+
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/main_nav"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:clipToPadding="false"
+            android:foregroundGravity="center"
+            android:overScrollMode="never"></android.support.v4.view.ViewPager>
+    </FrameLayout>
 
 </RelativeLayout>
